--- a/css/styles.css
+++ b/css/styles.css
@@ -657,7 +657,7 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-
+  padding: 72px 24px 24px 24px;
   min-height: 584px;
   width: 408px;
 
@@ -829,4 +829,110 @@ button {
 
 .focus-links:focus .overlay-par {
   transform: translateY(0%);
+}
+
+.title-form {
+  color: var(--NAVY-BLUE, #2e2f42);
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  width: 360px;
+}
+
+.modal-form-label {
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.48px;
+  margin-bottom: 4px;
+  display: block;
+}
+
+.box-input {
+  width: 360px;
+  padding: 8px 16px 8px 38px;
+  border-radius: 4px;
+  border: 1px solid #4d5ae5;
+  position: relative;
+  outline: transparent;
+}
+
+.box-input:focus-within {
+  border-color: #4d5ae5;
+}
+
+.box-input:focus-within + .box-input-svg {
+  stroke: #4d5ae5;
+}
+
+.box-input-svg {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  fill: transparent;
+  stroke: #404040;
+}
+
+.modal-form-div {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.form-textarea {
+  max-width: 360px;
+  min-height: 120px;
+  border-radius: 4px;
+  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+  resize: none;
+}
+
+.form-textarea:placeholder {
+  color: rgba(46, 47, 66, 0.4);
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.48px;
+  outline: transparent;
+}
+
+.form-textarea:focus-within {
+  border-color: #4d5ae5;
+}
+
+.modal-font-span {
+  width: 20px;
+  height: 20px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: inline-block;
+}
+
+.modal-form-label-checkbox {
+  color: #8e8f99;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.16;
+  letter-spacing: 0.48px;
+  display: flex;
+}
+
+.modal-form-link {
+  color: #4d5ae5;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0.48px;
+  text-decoration-line: underline;
+  margin-left: 4px;
+}
+
+.modal-form-checkbox:checked + .modal-form-label-checkbox > .modal-form-span {
+  background-color: #4d5ae5;
 }
