--- a/css/styles.css
+++ b/css/styles.css
@@ -543,10 +543,6 @@ button {
 .customers-item {
   width: calc((100% - 120px) / 6);
   height: 88px;
-  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
-  border-radius: 4px;
-  height: 100%;
-  width: 100%;
 }
 
 .second-section-logos {
@@ -788,6 +784,8 @@ button {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
+  width: 168px;
+  height: 88px;
 }
 
 .customers-link:hover,
