--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@
   --foot-logo-fill: #f4f4fd;
   --custom-title: #2e2f42;
   --custom-links: #8e8f99;
+  --label-color: #8e8f99;
+  --input-color: #404bbf;
 }
 
 h1,
@@ -844,7 +846,7 @@ button {
 .modal-form-label {
   color: #8e8f99;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.48px;
   margin-bottom: 4px;
   display: block;
@@ -852,11 +854,14 @@ button {
 
 .box-input {
   width: 360px;
+  height: 40px;
   padding: 8px 16px 8px 38px;
   border-radius: 4px;
-  border: 1px solid #4d5ae5;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   position: relative;
   outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .box-input:focus-within {
@@ -871,21 +876,39 @@ button {
   position: absolute;
   left: 16px;
   top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: transparent;
   stroke: #404040;
 }
 
+.box-input:focus .box-input-svg {
+  fill: #4d5ae5;
+}
+
 .modal-form-div {
   position: relative;
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 .form-textarea {
-  max-width: 360px;
-  min-height: 120px;
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
-  border: 1px solid var(--NAVY-BLUE-modal, rgba(46, 47, 66, 0.4));
+  border: 1px solid rgba(46, 47, 66, 0.4);
   resize: none;
+}
+
+.form-textarea:focus {
+  border-color: #4d5ae5;
 }
 
 .form-textarea:placeholder {
@@ -912,17 +935,17 @@ button {
 }
 
 .modal-form-label-checkbox {
-  color: #8e8f99;
+  color: var (--label-color);
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1.16;
-  letter-spacing: 0.48px;
-  display: flex;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: block;
 }
 
 .modal-form-link {
-  color: #4d5ae5;
+  color: var(--social-color);
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -932,26 +955,49 @@ button {
   margin-left: 4px;
 }
 
+.modal-form-checkbox-div {
+  margin-bottom: 24px;
+}
+
 .modal-form-checkbox:checked + .modal-form-label-checkbox > .modal-form-span {
   background-color: #4d5ae5;
 }
 
-.modal-btn-send {
-  padding: 16px 32px;
-  width: 169px;
-  border-radius: 4px;
-  background-color: #4d5ae5;
-  border-color: #4d5ae5;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+.modal-form-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
 }
 
-.modal-btn-text {
-  color: #fff;
-  text-align: center;
+.modal-form-checkbox:checked .modal-form-span {
+  background-color: var(--input-color);
+  border: none;
+  fill: var(--logo-team);
+}
+
+.modal-btn-send {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.64px;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-text {
+  text-align: center;
 }
 
 .button-footer {
@@ -1009,4 +1055,8 @@ button {
 .form-footer {
   display: flex;
   gap: 24px;
+}
+
+.form-input-box {
+  position: relative;
 }
